refactor event builder